[package]
name = "get_params_derive"
version = "0.6.0"
edition = "2021"
repository = "https://github.com/mztikk/get_params_derive"
authors = ["Nils Feierabend <mztikk@outlook.de>"]
license = "MIT"
description = "derive macro for get_params as JsValue"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
convert_case = "0.5.0"
proc-macro2 = "1.0.39"
quote = "1.0.18"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
syn = { version = "1.0.96", features = ["full"] }
thiserror = "1.0.31"
